--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.30.1",
     "@locator/babel-jsx": "^0.4.4",
+    "@locator/runtime": "^0.4.4",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
