--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.8",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "latest": "^0.2.0",
